src/NavBar/index.css
* {
  font-family: sans-serif;
}

/* NavMenu */

.nv-NavMenu {
  width: 100vw;
  height: 100vh;
  position: fixed;
  background: orange;
  left: 0;
  top: 100vh;
  -webkit-transition: all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  -moz-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  -ms-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  -o-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
}

.nv-NavMenu.visible {
  top: 0;
}

.nv-NavMenu-items {
  list-style: none;
  transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  position: absolute;
  top: 50%;
  left: 38%;
  font-size: 5.6vw;
  font-weight: normal;
  margin: 0;
  padding: 0;
}

.nv-NavMenu .nv-NavMenu-items li {
  font-weight: 500;
  display: block;
  position: relative;
}

/* NavMenuButton */

.nv-NavMenuButton {
  z-index: 2;
  position: fixed;
  bottom: 60px;
  right: 40px;
  border-radius: 100%;
  border: 1px solid;
  padding: 10px;
  width: 40px;
  height: 40px;
  text-align: center;
  transform: translate(-50%, -50%);
  -webkit-transition: all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  -moz-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  -ms-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  -o-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
  transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
}

.nv-NavMenuButton.visible {
  bottom: 85%;
}

.nv-NavMenuButton span {
  background: black;
  width: 2.5px;
  height: 2.5px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
  -moz-transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
  -ms-transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
  -o-transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
  transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
}

.nv-NavMenuButton:hover span {
  width: 5px;
  height: 5px;
  transform: translate(-50%, -50%) !important;
}

/* NavItems */

.nv-NavItems {
  z-index: 7000;
  text-align: center;
  position: fixed;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: flex-end;
  top: 60px;
  left: 100%;
  height: 80px;
  mix-blend-mode: difference;
  will-change: all;
  transform: rotateZ(90deg);
  -moz-transform: rotateZ(90deg);
  -webkit-transform: rotateZ(90deg);
  -o-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform-origin: 0% 0%;
  -webkit-transform-origin: 0% 0%;
  -o-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transition: all 1000ms cubic-bezier(0.77, 0, 0.175, 1);
  -webkit-transition: all 1000ms cubic-bezier(0.77, 0, 0.175, 1);
  -moz-transition: all 1000ms cubic-bezier(0.77, 0, 0.175, 1);
  -o-transition: all 1000ms cubic-bezier(0.77, 0, 0.175, 1);
  margin: 0;
  padding: 0;
  list-style: none;
}

.nv-NavItems li {
  font-size: 0.75em;
  margin-right: 5vh;
}

.nv-NavItems a {
  position: relative;
  display: inline-block;
}

.nv-NavItems a:before {
  content: "";
  display: block;
  background-color: black;
  width: 6px;
  border-radius: 50%;
  height: 6px;
  position: absolute;
  top: 0;
  left: 50%;
  transition: all 900ms cubic-bezier(0.3, 0, 0, 1);
  -webkit-transition: all 900ms cubic-bezier(0.3, 0, 0, 1);
  -moz-transition: all 900ms cubic-bezier(0.3, 0, 0, 1);
  -o-transition: all 900ms cubic-bezier(0.3, 0, 0, 1);
  transform: scale(0) translate(-50%, -1.2em);
  -moz-transform: scale(0) translate(-50%, -1.2em);
  -webkit-transform: scale(0) translate(-50%, -1.2em);
  -o-transform: scale(0) translate(-50%, -1.2em);
  -ms-transform: scale(0) translate(-50%, -1.2em);
  transform-origin: 0% 100%;
  -webkit-transform-origin: 0% 100%;
  -o-transform-origin: 0% 100%;
  -ms-transform-origin: 0% 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

.nv-NavItems li a.active:before {
  transform: scale(1) translate(-50%, -1.2em);
  -moz-transform: scale(1) translate(-50%, -1.2em);
  -webkit-transform: scale(1) translate(-50%, -1.2em);
  -o-transform: scale(1) translate(-50%, -1.2em);
  -ms-transform: scale(1) translate(-50%, -1.2em);
}

.nv-NavItems.visible {
  -webkit-transition: -webkit-transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  transition: -webkit-transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  transition: transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  transition: transform 600ms cubic-bezier(0.9, 0, 0.1, 1), -webkit-transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  -webkit-transition: transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  -moz-transition: transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  -o-transition: transform 600ms cubic-bezier(0.9, 0, 0.1, 1);
  transform: rotateZ(90deg) translateY(-130%);
  -moz-transform: rotateZ(90deg) translateY(-130%);
  -webkit-transform: rotateZ(90deg) translateY(-130%);
  -o-transform: rotateZ(90deg) translateY(-130%);
  -ms-transform: rotateZ(90deg) translateY(-130%);
}

